# video-watermark-cli

./: .gitignore  pyproject.toml
src/video_watermark_cli/: __main__.py  config.py
src/video_watermark_cli/commands/: video.py
src/video_watermark_cli/core/: pool.py  watermark_core.py
src/video_watermark_cli/tests/: test_watermark_core.py
src/video_watermark_cli/utils/: ffmpeg.py  logger.py  qrcode.py  watermark_utils.py
